<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="1.5dp"
        android:layout_marginRight="1.5dp"
        android:background="#202020"
        android:tag="title block">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_settings"
            android:textColor="#ffffff"
            android:textSize="30dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="1.5dp"
        android:layout_marginRight="1.5dp"
        android:layout_marginBottom="5dp"
        android:background="#202020"
        android:tag="configure block">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/baudRate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center|bottom"
                android:text="@string/baud_rate_str"
                android:textColor="#ffffff" />

            <Spinner
                android:id="@+id/baudRateValue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="#0877A6"
                android:gravity="center_horizontal|center"
                android:inputType="none" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/stopBit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center|bottom"
                android:text="@string/stop_bit"
                android:textColor="#ffffff" />

            <Spinner
                android:id="@+id/stopBitValue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="#0877A6"
                android:gravity="center_horizontal|center"
                android:inputType="none" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dataBit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center|bottom"
                android:text="@string/data_bit"
                android:textColor="#ffffff"></TextView>

            <Spinner
                android:id="@+id/dataBitValue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="#0877A6"
                android:gravity="center_horizontal|center"
                android:inputType="none" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/parity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center|bottom"
                android:text="@string/parity_str"
                android:textColor="#ffffff"></TextView>

            <Spinner
                android:id="@+id/parityValue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="#0877A6"
                android:gravity="center_horizontal|center"
                android:inputType="none" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1.5dip"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="#202020"
        android:tag="configure block">

        <Button
            android:id="@+id/open_device"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/open" />

        <Button
            android:id="@+id/configButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:gravity="center"
            android:scaleType="centerInside"
            android:text="@string/config" />
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="1.5dip"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:background="#202020"
        android:tag="Read block" >

        <TextView
            android:id="@+id/ReadBytes"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/read_bytes"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ReadValues"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="#0877A6"
            android:focusableInTouchMode="false"
            android:gravity="left|top"
            />

    </LinearLayout>
    <Button
        android:id="@+id/clearButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:background="@drawable/button_pattern"
        android:gravity="center"
        android:scaleType="centerInside"
        android:text="@string/clear" />


</LinearLayout>

    <!-- Write byte -->



</LinearLayout>

